  updates. So, in the near future we will upgrade our minimal requirements to PHP 8.1.

Features:
- JOO: Native support for Joomla 5, our component and plugins do no longer need the compat
  plugin. However note, that VirtueMart does need that plugin. hikaShop has its own compat
  layer, so probably does not need that plugin.

Bugs:
- PS: Settings form: set of order statuses to trigger sending the invoice data to Acumulus
  was not stored or displayed correctly.
- ALL: mapping for a metadata value may be the constant null but this was rejected when
  expanding mappings (as fields may not set to null).

8.2.0 (2024-07-11) (ALL)
------------------------
Features:
- ALL: A new setting has been introduced that allows to add the e-invoice to the Acumulus
  invoice pdf when it gets mailed to the customer (either on sending the invoice data to
  Acumulus or using the buttons specific for mailing the invoice pdf (on the invoice list
  and/or details screens).

Bugs:
- ALL: If tax is based on shipping address, and the shipping country differs from the
  invoice country, the vat rate lookups/checks would still use the invoice country.


8.1.5 (2024-07-02) (OC)
-----------------------
Bugs:
- ALL: External links on our forms: were not all opened in a new tab; and some referred to
  outdated URLs.
- ALL: Field product name on mappings form does not correspond with mapping for product
  name. As it was not yet really used, this is no big deal.
- ALL: Completing invoice lines: computing unitprice based on unitpriceinc with a vatrate
  of -1 (vat free) was not done correctly. Known usages: OC.
- OC4: Source::getPaymentMethod(): storage of this info has changed in OC4 compared to OC3
  and a 2nd time within OC4.
- OC4: Order statuses were not presented by their name (but by their language_id).

Refactorings:
- OC: Implemented the new "collect-complete architecture" for OpenCart.


8.1.4 (2024-05-22) (JOO)
------------------------
Bugs: